# deploy-local-llms

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: chain_config.py  collection_config.py  main.py  schema.py
app/client/: index.html
app/client/static/css/: styles.css
app/client/static/js/: script.js
